# fastapi-your-data

./: .dockerignore  .env.example  .env.template  .gitignore  404.html  Dockerfile  ETL_Texts_README.md  LICENSE  Makefile  Procfile  README.md  cloudbuild.yaml  custom_tree_and_files_corrected.txt  docker-compose-dev.ayml  docker-compose-dev.yml  docker-compose.ayml  docker-compose.yml  fetch_repo_stats.py  index.html  mkdocs.yml  pgadmin.yml  requirements.txt  search.html  vercel.json
backend/app/: main.py  pyproject.toml
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 2024-01-25-11-47_8a3e4b8f3672.py  2024-01-25-12-04_ba9eb54fed62.py  2024-01-25-12-24_98924ad486ab.py  2024-01-25-12-25_398523055948.py  2024-01-25-12-28_3813a9d96f3f.py
backend/app/api/v1/: api.py
backend/app/app/: main.py
backend/app/app/api/: dependencies.py
backend/app/app/controller/: platform.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: base_crud.py  company_crud.py  document_crud.py  github_crud.py  user_crud.py
backend/app/app/database/: init_db.py  session.py
backend/app/app/gateway/: api_router.py
backend/app/app/models/: company_model.py  document_model.py  documents.py  github_model.py  user_model.py
backend/app/app/repository/: documents.py
backend/app/app/schemas/: company_schema.py  user_schema.py  (+2 more)
backend/app/core/: security.py
backend/app/crud/: base_crud.py
backend/app/database/: init_db.py  session.py
backend/app/models/: company_model.py  document_model.py
backend/app/tests/: test_api_integration.py
(+153 files in other folders)
