[tool.poetry]
name = "fastapi-your-data"
version = "0.1.0"
description = "Learning journey to develop a scalable and modular backend in FastAPI to be able to manage and organize your data and solve your problems"
authors = ["mazzasaverio <saverio3107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
pytest = "^8.0.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.0"
alembic = "^1.13.1"
pgvector = "^0.2.5"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
