[tool.poetry]
name = "fastapi-your-data"
version = "0.1.0"
description = ""
authors = ["mazzasaverio <saverio3107@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
pytest = "^8.0.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
pgvector = "^0.2.5"
tqdm = "^4.66.2"
requests = "^2.31.0"
gunicorn = "^21.2.0"
fastapi-pagination = "^0.12.16"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"
sentence-transformers = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
